--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opensea-v2-youtube",
+  "name": "fyrefli",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,7 +23,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "moralis": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
